compiler/test/programs/syntax_error/constant_missing_attributes.fl
<?xml version="1.0" encoding="UTF-8"?>
<fluir >
    <function
        name="main"
        id="1"
        x="10"
        y="10"
        z="3"
        w="100"
        h="100">
      <body>
        <constant
            x="0"
            y="10"
            z="3"
            w="5"
            h="5">
          <f64>6.7</f64>
        </constant>
      </body>
    </function>
</fluir>
